--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 /* Header Styling */
 header {
-    background-color: #ff5e00; /* Orange color */
+    background-color: #CBC3E3; /* Orange color */
     padding: 20px 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
