--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@ main {
 main h1 {
     font-size: 2rem;
     margin-bottom: 20px;
-    color: #ff5e00;
+    color: #CBC3E3;
 }
 
 .video-wrapper {
     margin: 0 auto;
     max-width: 800px;
-    border: 4px solid #ff5e00;
+    border: 4px solid #CBC3E3;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 15px rgba(255, 94, 0, 0.5);
