--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
 
 /* Header Styling */
 header {
-    background-color: #BF40BF; /* Orange color */
+    background-color: #AA336A; /* Orange color */
     padding: 20px 10px;
-    box-shadow: 0 2px 10px rgb(191, 64, 191);
+    box-shadow: 0 2px 10px rgb(170, 51, 106);
 }
 
 header .logo {
@@ -39,16 +39,16 @@ main {
 main h1 {
     font-size: 2rem;
     margin-bottom: 20px;
-    color: #BF40BF;
+    color: #AA336A;
 }
 
 .video-wrapper {
     margin: 0 auto;
     max-width: 800px;
-    border: 4px solid #BF40BF;
+    border: 4px solid #AA336A;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 15px rgb(191, 64, 191);
+    box-shadow: 0 4px 15px rgb(170, 51, 106);
 }
 
 iframe {
@@ -67,7 +67,7 @@ footer {
 }
 
 footer a {
-    color: #BF40BF;
+    color: #AA336A;
     text-decoration: none;
 }
 
